# JobPlacer

./: .gitignore  Cargo.toml  README.md  cli_wrapper.py  install.sh  jupiter_sinfo.txt  jupiter_topo.txt  leonardo_sinfo.txt  leonardo_test.sbatch  leonardo_topo.txt  requirements.txt  slurm.py  test.py  test.sbatch  topology.dot
clusters/: HAICGU.yaml
example/placements/: alloc.json  test.json
example/queries/: 2_on_same_l1_1_different_group.json  2_on_same_l1_1_same_group.json  3_at_distance_5.json  3_on_same_l1_1_different_group.json  3_on_same_l1_1_same_group.json
placer/: nodelist_generator.py  setup.py
python/: nodelist_generator_rust.py
src/: lib.rs  main.rs  placement.rs  placement_stats.rs
src/builder/: display.rs  graph.rs  mod.rs  validate.rs
src/graph/: display.rs  mod.rs
src/ir/: entity.rs  id.rs  link.rs  mod.rs  topology_ir.rs
src/parsers/: jupiter.rs  leonardo.rs  manual.rs  mod.rs  sinfo.rs  slurm.rs  toml.rs  yaml.rs
src/python/: mod.rs
src/query/: constraint.rs  error.rs  executor.rs  input.rs  mod.rs  reference.rs
src/topology/: alps.rs  jupiter.rs  leonardo.rs  mod.rs
systems/: ALPS.toml  ALPS_CLARIDEN.toml  ALPS_DAINT.toml  HAICGU.toml  LUMI.toml  NANJING.toml  NANJING.yaml  alps_clariden_cabinets_to_toml.py  alps_daint_cabinets_to_toml.py  lumi_nodes_to_toml.py
