[package]
name = "job_placer"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.28.1", optional = true }

[lib]
name = "job_placer"
path = "src/lib.rs"

[features]
python = ["pyo3"]
